# Task-Scheduler

./: CMakeLists.txt  README.md  test.cpp
src/: CMakeLists.txt  main.cpp
src/builder/: TaskBuilder.cpp  TaskBuilder.hpp  TaskBuilderInterface.hpp  TaskDirector.cpp  TaskDirector.hpp  TaskListBuilder.cpp  TaskListBuilder.hpp
src/classification/: classification.hpp  classificationManager.cpp  classificationManager.hpp
src/planner/: Planner.cpp  Planner.h
src/tasks/: Task.cpp  Task.h  TaskInterface.cpp  TaskInterface.h  TaskList.cpp  TaskList.h
